<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="Red">Red</string>
    <string name="Silver">Silver</string>
    <string name="White">White</string>
    <string name="_is_typing_">is typing...</string>
    <string name="_u_email_is_confirmed_u_">Email is Confirmed</string>
    <string name="_u_email_is_unconfirmed_u_">Email is Unconfirmed</string>
    <string name="abm_find_people_disable_caps">DISABLE</string>
    <string name="abm_find_people_done_caps">DONE</string>
    <string name="abm_find_people_has_number">Use your phone contacts to help you find your friends. Your information will be kept private and will not be shared</string>
    <string name="abm_find_people_matches_bar_multiple_matches">We found people you know</string>
    <string name="abm_find_people_matches_bar_no_matches">"Your friends aren't on Kik yet"</string>
    <string name="abm_find_people_matches_bar_one_match">We found someone you know</string>
    <string name="abm_find_people_matches_bar_view_all_caps">VIEW ALL</string>
    <string name="abm_find_people_search_header">Invite Friends to Kik</string>
    <string name="abm_friends_will_also_find_you">Your friends will also be able to find you</string>
    <string name="abm_friends_will_find_you">Your friends will be able to find you</string>
    <string name="abm_friends_wont_find_you">"Your friends won't be able to find you"</string>
    <string name="abm_matching_dialog_text">Upload your address book and contact info to tell you which of your friends already have Kik?</string>
    <string name="abm_opt_in_prompt">Use your phone contacts to find friends already on Kik.</string>
    <string name="abm_options_dialog_confirm_hint">"You will be able to find your friends but your friends won't be able to find you"</string>
    <string name="abm_options_dialog_hint">People who have your phone or email will be able to find you</string>
    <string name="abm_options_dialog_prompt">Allow friends to find me</string>
    <string name="abm_privacy_options_title">Privacy Options</string>
    <string name="about_copyright_text">Copyright © 2016 Kik Interactive Inc All rights reserved</string>
    <string name="about_copyright_text_extended">"Copyright © 2016 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7"</string>
    <string name="about_copyright_text_extended_link">"Copyright © 2016 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7

http://help.kik.com"</string>
    <string name="about_kik">About Kik</string>
    <string name="about_update_kik">Kik Version</string>
    <string name="account_change_configuration">Configuration</string>
    <string name="action_header">Action</string>
    <string name="activity_conversations_block_chat">Block</string>
    <string name="activity_conversations_chat_info">Info</string>
    <string name="activity_conversations_delete_chat">Delete</string>
    <string name="find_people_share_profile">Share Your Profile</string>
    <string name="set_photo">Set Photo</string>
    <string name="profile_bio_empty_hint">Describe who you are</string>
    <string name="lynx_settings">Lynx Settings</string>
    <string name="lynx_enable_links">Enable Links</string>
    <string name="lynx_enable_links_key">lynx.links</string>
    <string name="lynx_enable_links_summary">Links will be parsed and clickable</string>
    <string name="lynx_anti_loggers">Anti Loggers</string>
    <string name="lynx_anti_loggers_key">lynx.loggers</string>
    <string name="lynx_anti_loggers_summary">Cards you send/receive will open Google</string>
    <string name="lynx_no_pull">No Pull</string>
    <string name="lynx_no_pull_key">lynx.pull</string>
    <string name="lynx_no_pull_summary">Disables pull to scan in convo list</string>
    <string name="lynx_privacy_mode">Privacy Mode</string>
    <string name="lynx_privacy_mode_key">lynx.privacy</string>
    <string name="lynx_privacy_mode_summary">Hide message previews on convo screen</string>
    <string name="lynx_per_chat">Per-Chat</string>
    <string name="lynx_disable_typing">Disable Typing</string>
    <string name="lynx_disable_typing_key">lynx.typing</string>
    <string name="lynx_disable_typing_summary">Others will not see you typing</string>
    <string name="lynx_read_receipts">Read Receipts</string>
    <string name="lynx_read_receipts_key">lynx.receipts</string>
    <string name="lynx_read_receipts_summary">How your messages are received</string>
    <string name="lynx_do_not_disturb">Do Not Disturb</string>
    <string name="lynx_do_not_disturb_key">lynx.disturb</string>
    <string name="lynx_do_not_disturb_summary">Automatically leaves groups you are added to</string>
    <string name="lynx_media_options">Media Options</string>
    <string name="lynx_media_options_summary">How your medias are sent</string>
    <string name="lynx_enable_timestamps">Enable Timestamps</string>
    <string name="lynx_enable_timestamps_key">lynx.enable.timestamp</string>
    <string name="lynx_enable_timestamps_summary">"Enables timestamps
(Random/Custom)"</string>
    <string name="lynx_random_timestamps">Random Timestamps</string>
    <string name="lynx_random_timestamps_key">lynx.random.timestamp</string>
    <string name="lynx_random_timestamps_summary">Message sent timestamp is random everytime</string>
    <string name="lynx_custom_timestamps">Custom Timestamps</string>
    <string name="lynx_custom_timestamps_key">lynx.custom.timestamp</string>
    <string name="lynx_custom_timestamps_summary">Custom Timestamps for your messages</string>
    <string name="lynx_enable_welcome_back">Enable Welcome Back</string>
    <string name="lynx_enable_welcome_back_key">lynx.wb</string>
    <string name="lynx_enable_welcome_back_summary">Enables Welcome back toast</string>
    <string name="lynx_custom_welcome_back">Custom welcome back</string>
    <string name="lynx_custom_welcome_back_summary">Custom welcome back text</string>
    <string name="lynx_clear_chat">Clear Chat</string>
    <string name="lynx_clear_chat_summary">Clear Chat History</string>
    <string name="lynx_toast_length">Toast Length</string>
    <string name="lynx_toast_length_key">lynx.wb.length</string>
    <string name="lynx_toast_length_summary">Duration of welcome back message</string>
    <string name="lynx_video_chat">Video Chat</string>
    <string name="lynx_hide_video_chat_icon">Hide video chat icon</string>
    <string name="lynx_hide_video_chat_icon_key">lynx.vidchat.icon</string>
    <string name="lynx_hide_video_chat_icon_summary">Hides start video chat icon</string>
    <string name="lynx_hide_video_chat_notifications">Hide video chat notifications</string>
    <string name="lynx_hide_video_chat_notifications_key">lynx.vidchat.notification</string>
    <string name="lynx_hide_video_chat_notifications_summary">Hides the notification if someone tried to video chat you</string>
	<string name="kyoto_settings">Kyotokek Settings</string>
</resources>