<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/kyoto_settings" android:key="@string/lynx_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_no_pull" android:key="@string/lynx_no_pull_key" android:summary="@string/lynx_no_pull_summary" kik:pref_divider="top" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_anti_loggers" android:key="@string/lynx_anti_loggers_key" android:summary="@string/lynx_anti_loggers_summary" kik:pref_divider="top" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_links" android:key="@string/lynx_enable_links_key" android:summary="@string/lynx_enable_links_summary" kik:pref_divider="top" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_privacy_mode" android:key="@string/lynx_privacy_mode_key" android:summary="@string/lynx_privacy_mode_summary" kik:pref_divider="top" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_do_not_disturb" android:key="@string/lynx_do_not_disturb_key" android:summary="@string/lynx_do_not_disturb_summary" kik:pref_divider="top" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_welcome_back" android:key="@string/lynx_enable_welcome_back_key" android:summary="@string/lynx_enable_welcome_back_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.WelcomeBack_LYNX android:enabled="true" android:title="@string/lynx_custom_welcome_back" android:summary="@string/lynx_custom_welcome_back_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_wb_length" android:title="@string/lynx_toast_length" android:key="@string/lynx_toast_length_key" android:summary="@string/lynx_toast_length_summary" android:entryValues="@array/lynx_wb_length_values" kik:pref_divider="bottom" />
  <lynx.bliss.widget.preferences.ClearPref android:enabled="true" android:title="@string/lynx_clear_chat" android:summary="@string/lynx_clear_chat_summary" kik:pref_divider="bottom" />
  </PreferenceScreen>
