<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/kyoto_settings" android:key="@string/lynx_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
  <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_per_chat" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_receipts" android:title="@string/lynx_read_receipts" android:key="@string/lynx_read_receipts_key" android:summary="@string/lynx_read_receipts_summary" android:entryValues="@array/lynx_receipts" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_disable_typing" android:key="@string/lynx_disable_typing_key" android:summary="@string/lynx_disable_typing_summary" kik:pref_divider="top" />
	</PreferenceScreen>