<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/kik_profpic_preference_0" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/profile_pic_share" android:background="?selectableItemBackgroundBorderless" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_share" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/find_people_share_profile" />
    <FrameLayout android:id="@id/trophy_case_layout" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/profile_pic_share">
        <ImageView android:layout_gravity="center" android:id="@id/trophy_case" android:padding="16.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_trophy" />
        <ImageView android:layout_gravity="center|right|top" android:id="@id/trophy_notification" android:visibility="gone" android:layout_width="14.0dip" android:layout_height="14.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="7.0dip" android:src="@xml/notification_list_selector" />
    </FrameLayout>
    <FrameLayout android:id="@id/profile_pic_container" android:focusable="true" android:layout_width="112.0dip" android:layout_height="112.0dip" android:layout_marginTop="32.0dip" android:foreground="@drawable/circular_prof_pic_selector" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/set_profile_pic" android:background="?circular_button_outline" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_set_photo" />
            <TextView android:textSize="14.0sp" android:textColor="@color/lynx_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/set_photo" />
        </LinearLayout>
        <com.kik.cache.SoftwareContactImageView android:id="@id/profile_pic" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitCenter" />
    </FrameLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/profile_username_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/profile_pic_container" android:layout_centerHorizontal="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/profile_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:maxLines="1" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_tertiary" android:ellipsize="end" android:id="@id/profile_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:maxLines="1" />
        <FrameLayout android:tag="binding_1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
            <lynx.bliss.widget.RobotoTextView android:layout_gravity="center_horizontal" android:id="@id/profile_current_bio" android:tag="binding_2" android:padding="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/KikTextView.Profile.Bio.CurrentUser" />
            <FrameLayout android:id="@id/profile_no_bio_set" android:tag="binding_3" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <lynx.bliss.widget.RobotoTextView android:textSize="14.0sp" android:textColor="@color/blue_text_button_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:padding="4.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_bio_empty_hint" android:drawableLeft="@drawable/ic_edit_text_selectable" android:drawablePadding="4.0dip" android:textAllCaps="true" app:font_type="medium" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>